--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+     "dev": "vite",
+     "build": "vite build",
+     "preview": "vite preview",
+     "predeploy": "npm run build",
+     "deploy": "gh-pages -d dist"
   }
 }
