--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,5 @@
   },
   "scripts": {
     "start": "react-scripts start",
-     "dev": "vite",
-     "build": "vite build",
-     "preview": "vite preview",
-     "predeploy": "npm run build",
-     "deploy": "gh-pages -d dist"
-  }
+    "build": "react-scripts build"
 }
